fix(request): define static constants for request states